chore(meta): add author, description and keywords

--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Catalin Broinas" />
+    <meta
+      name="description"
+      content="React application with a players list, filter for content and sort content."
+    />
+    <meta
+      name="keywords"
+      content="web development, front-end, react app, javascript, SASS, Font Awesome, html, vite."
+    />
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
