chore(head): update title and meta tags

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="author" content="Catalin Broinas" />
     <meta
       name="description"
-      content="React application with a players list, filter for content and sort content."
+      content="Football players list with filtering and sorting."
     />
     <meta
       name="keywords"
-      content="web development, front-end, react app, javascript, SASS, Font Awesome, html, vite."
+      content="football players, react filtering, react sorting, players list, react app"
     />
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <title>react-app</title>
+    <title>Football Players — React App</title>
   </head>
   <body>
     <div id="root"></div>
